--- a/latihan6.html
+++ b/latihan6.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dunia Fantasi</title>
     <link rel="stylesheet" href="style2.css?v=1">
-    <link rel="icon" href="/latihan/images/favicondufan2.ico">
+    <link rel="icon" href="/HTMLcantik4/favicondufan2.ico">
 </head>
 <body>
 
@@ -73,7 +73,7 @@
     Untuk yang mencari pengalaman naik kereta yang bikin bulu kuduk berdiri, pastikan mencoba wahana kereta luncur ini. 
     Sedikit informasi, kereta misteri disebut sebagai indoor coaster terbesar di Indonesia. </p><br>
 <div class="kontainer-flex">
-<img src="/latihan/images/misteri.jpeg">
+<img src="/HTMLcantik4/misteri.jpeg">
 </div><br>
 
 <table>
@@ -92,21 +92,21 @@
     karena pengunjung akan merasakan sensasi seperti dibanting ketika ban karet menyusuri sungai buatan.
     Otomatis, sekali-kali air sungai akan menciprat dan membasahi baju. Jadi, pastikan membawa baju cadangan sebelum memutuskan akan mencoba wahana seru ini.</p><br>
     <div class="kontainer-flex">
-<img src="/latihan/images/arungjeram.jpeg">
+<img src="/HTMLcantik4/arungjeram.jpeg">
 </div><br>
 
 <h3><b>4. Halilintar</b></h3>
 <p>Layaknya halilintar ketika ada badai, fenomena langit tersebut bergerak secara zig-zag atau liku-liku. 
     Terinspirasi dari fenomena tersebut, roller coaster ini memiliki lintasan yang berliku-liku, berputar, terbalik dan rumit. Bagi para pecinta adrenalin, pastikan menyambangi wahana ekstrem ini.</p><br>
     <div class="kontainer-flex">
-<img src="/latihan/images/halillintar.jpeg">
+<img src="/HTMLcantik4/halillintar.jpeg">
 </div><br>
 
 <h3><b>5. Bianglala</b></h3>
 <p>Wahana Dufan ini sangat cocok dinikmati bersama teman-teman. Dari ketinggian 33 meter di atas permukaan laut, penumpang akan dimanjakan dengan pemandangan luar biasa dari atas. 
     Ini merupakan cara lain selain menumpangi Gondola untuk melihat panorama Ancol. </p><br>
     <div class="kontainer-flex">
-<img src="/latihan/images/bianglala.jpeg">
+<img src="/HTMLcantik4/bianglala.jpeg">
 </div><br>
 
 <h2>Perkembangan DUFAN dari Tahun ke Tahun</h2>
