--- a/latihan6.html
+++ b/latihan6.html
@@ -13,7 +13,7 @@
 <div class="kontainer-flex">
 
 </div><br>
-<div class="box"><img src="/latihan/images/dufan.jpeg" style="float: left;">Dufan, atau Dunia Fantasi, adalah taman hiburan yang terletak di kawasan Taman Impian Ancol, Jakarta Utara.
+<div class="box"><img src="/HTMLcantik4/dufan.jpeg" style="float: left;">Dufan, atau Dunia Fantasi, adalah taman hiburan yang terletak di kawasan Taman Impian Ancol, Jakarta Utara.
      Sebagai salah satu destinasi wisata paling populer di Indonesia, Dufan menawarkan berbagai wahana menarik yang cocok untuk semua kalangan, mulai dari anak-anak hingga orang dewasa. Beberapa wahana ikonik yang dapat ditemukan di sini termasuk Hysteria, sebuah wahana ekstrem yang memberikan sensasi jatuh bebas dari ketinggian, 
      serta Halilintar, roller coaster yang terkenal dengan lintasan berliku dan tantangan mendebarkan. Dengan pemandangan yang menakjubkan dan suasana yang ceria, Dufan menjadi tempat ideal untuk menghabiskan waktu bersama keluarga dan teman.<br>
      Selain wahana seru, Dufan juga menyediakan berbagai fasilitas untuk kenyamanan pengunjung, seperti restoran, toko suvenir, dan area istirahat. Pengunjung dapat menikmati pengalaman berharga sambil menjelajahi berbagai atraksi yang ada. Dengan harga tiket yang bervariasi tergantung pada hari kunjungan dan jenis tiket, 
