--- a/latihan6.html
+++ b/latihan6.html
@@ -49,7 +49,7 @@
     Meski tidak melempar-lemparkan pengunjung dari ketinggian, wahana ini tetaplah cukup ekstrim.</p>
 <br>
 <div class="kontainer-flex">
-    <img src="/latihan/images/kora2.jpeg">
+    <img src="/HTMLcantik4/kora2.jpeg">
 </div><br>
 
 <table>
